--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,12 +3,26 @@ html
 	head
 		title= title
 		link(rel='stylesheet', href='/stylesheets/style.css')
-		script(src="https://cdnjs.cloudflare.com/ajax/libs/gl-matrix/2.3.2/gl-matrix-min.js")
-		if vertex
-			script(id="shader-vs" type="x-shader/x-vertex" )= vertex
-		if fragment
-			script(id="shader-fs" type="x-shader/x-fragment")= fragment
+
+		//- script(src="https://cdnjs.cloudflare.com/ajax/libs/gl-matrix/2.3.2/gl-matrix-min.js")
+		script(src="/javascripts/utility/gl-matrix.js")
+		script(src="/javascripts/utility/utils.js")
+
+		//-Classes
+		script(src="/javascripts/classes/Camera.js")
+		script(src="/javascripts/utility/utils.js")
+
+		//- if vertex
+		script(id="shader-vs" type="x-shader/x-vertex" )= vertex
+		//- if fragment
+		script(id="shader-fs" type="x-shader/x-fragment")= fragment
+
+		script(id="shader-tex-vs" type="x-shader/x-vertex" )= vertex_tex
+		script(id="shader-tex-fs" type="x-shader/x-fragment")= fragment_tex
+
 		script(src= pagejs)
+
+
 
 	body(onload="start()")
 		block content
