Changes Recorded in README

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -7,10 +7,12 @@ html
 		//- script(src="https://cdnjs.cloudflare.com/ajax/libs/gl-matrix/2.3.2/gl-matrix-min.js")
 		script(src="/javascripts/utility/gl-matrix.js")
 		script(src="/javascripts/utility/utils.js")
+		script(src="/javascripts/utility/OBJMesh.js")
 
 		//-Classes
 		script(src="/javascripts/classes/Camera.js")
-		script(src="/javascripts/utility/utils.js")
+		script(src="/javascripts/classes/Mesh.js")
+		//- script(src="/javascripts/utility/utils.js")
 
 		//- if vertex
 		script(id="shader-vs" type="x-shader/x-vertex" )= vertex
